--- a/course/react-typescript/package.json
+++ b/course/react-typescript/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
